# Squash

./: .gitignore  Cargo.toml  README.md
squash/: Cargo.toml
squash-derive/: Cargo.toml
squash-derive/src/: lib.rs
squash/examples/: enum_cursor.rs  enum_serde.rs
squash/src/: error.rs  lib.rs
squash/src/ds/: bool.rs  bool_tuple.rs  mod.rs
squash/src/num/: float.rs  int.rs  mod.rs  uint.rs  ux.rs  vlq.rs
squash/src/roblox/: axes.rs  brick_color.rs  catalog_search_params.rs  cframe.rs  color3.rs  color_sequence.rs  color_sequence_keypoint.rs  date_time.rs  enum_item.rs  faces.rs  float_curve_key.rs  font.rs  mod.rs  number_range.rs  number_sequence.rs  number_sequence_keypoint.rs  overlap_params.rs  path_waypoint.rs  physical_properties.rs  prelude.rs  ray.rs  raycast_params.rs  raycast_result.rs  rect.rs  region3.rs  rotation_curve_key.rs  tween_info.rs  udim.rs  vector2.rs  vector3.rs
squash/src/serdes/: bool.rs  cursor.rs  des.rs  int.rs  mod.rs  number.rs  ser.rs  uint.rs  ux.rs
squash/src/serdes/cursor/: bytes.rs  mod.rs  object.rs
