[package]
name = "squash"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for serializing and deserializing binary data with a focus on size and Roblox compatibility."
repository = "https://github.com/Stefanuk12/squash-rs"
readme = "README.md"
categories = [
    "encoding",
    "parser-implementations",
    "data-structures",
]
keywords = [
    "squash",
    "serde",
    "roblox",
    "luau"
]

[dependencies]
squash-derive = { path = "../squash-derive" }

thiserror.workspace = true
serde = { workspace = true, optional = true }
derive_more.workspace = true
ux.workspace = true

[features]
default = ["roblox"]
roblox = []
serde = ["dep:serde"]

[[example]]
name = "enum_serde"
required-features = ["serde"]